turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:26: error: ')' expected but ';' found.
  setPos(a-150;b+75)
              ^HouseMany:26: error: ';' expected but ')' found.
  setPos(a-150;b+75)
                   ^HouseMany:36: error: ')' expected but ';' found.
  setPos(k;o+75)
          ^HouseMany:36: error: ';' expected but ')' found.
  setPos(k;o+75)
               ^